--- a/package.json
+++ b/package.json
@@ -20,18 +20,23 @@
     "url": "https://github.com/Giftbit/internal-rothschild/issues"
   },
   "homepage": "https://github.com/Giftbit/internal-rothschild#readme",
-  "devDependencies": {
+  "dependencies": {
     "@types/aws-lambda": "0.0.33",
     "@types/chai": "^4.1.2",
     "@types/mocha": "^2.2.48",
     "@types/node": "^9.4.7",
+    "aws-sdk": "^2.208.0",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.1",
     "babel-plugin-transform-async-to-generator": "^6.24.1",
     "babel-polyfill": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
+    "cassava": "^1.5.1",
     "chai": "^4.1.0",
+    "dynameh": "^2.10.3",
     "file-loader": "^1.1.11",
+    "giftbit-cassava-routes": "git+ssh://git@github.com/Giftbit/giftbit-cassava-routes.git#semver:^5.5.1",
+    "giftbit-lambda-metricslib": "git+ssh://git@github.com/Giftbit/giftbit-lambda-metricslib.git#semver:^2.0.1",
     "json-loader": "^0.5.7",
     "mocha": "^5.0.4",
     "rimraf": "^2.6.2",
@@ -42,6 +47,5 @@
     "webpack": "^4.1.1",
     "webpack-cli": "^2.0.11",
     "zip-webpack-plugin": "^3.0.0"
-  },
-  "dependencies": {}
+  }
 }
