--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "@types/chai": "^4.1.2",
     "@types/mocha": "^2.2.48",
     "@types/node": "^9.4.7",
-    "aws-sdk": "^2.211.0",
+    "aws-sdk": "^2.212.1",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.1",
     "babel-plugin-transform-async-to-generator": "^6.24.1",
@@ -40,6 +40,7 @@
     "json-loader": "^0.5.7",
     "mocha": "^5.0.4",
     "promise-mysql": "^3.2.1",
+    "raw-loader": "^0.5.1",
     "rimraf": "^2.6.2",
     "ts-loader": "^4.1.0",
     "ts-node": "^5.0.1",
