--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/aws-lambda": "0.0.33",
     "@types/chai": "^4.1.2",
     "@types/mocha": "^2.2.48",
+    "@types/mysql2": "github:types/mysql2",
     "@types/node": "^9.4.7",
     "aws-sdk": "^2.212.1",
     "babel-core": "^6.26.0",
@@ -39,7 +40,7 @@
     "giftbit-lambda-metricslib": "git+ssh://git@github.com/Giftbit/giftbit-lambda-metricslib.git#semver:^2.0.1",
     "json-loader": "^0.5.7",
     "mocha": "^5.0.4",
-    "promise-mysql": "^3.2.1",
+    "mysql2": "^1.5.3",
     "raw-loader": "^0.5.1",
     "rimraf": "^2.6.2",
     "ts-loader": "^4.1.0",
