--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "giftbit-lambda-metricslib": "git+ssh://git@github.com/Giftbit/giftbit-lambda-metricslib.git#semver:^2.0.1",
     "json-loader": "^0.5.7",
     "mocha": "^5.0.4",
-    "mysql2": "^1.5.3",
+    "promise-mysql": "^3.2.1",
     "raw-loader": "^0.5.1",
     "rimraf": "^2.6.2",
     "ts-loader": "^4.1.0",
